<resources>
    <string name="app_name">Bull Run Market</string>
    <string name="title_activity_truck_selection">TruckSelection</string>
    <string name="select_truck">Select a Truck…</string>
    <string name="tacos">Rico\'s Tacos</string> <!-- I really hope Ben made Ricos tacos and not the other thing. :) thanks for believing in me-->
    <string name="pizza">Pizza Time</string>
    <string name="italian">Italian on Wheels</string>
    <string name="delight">Hyderabadi Delight</string> <!-- This is Hyderabadi Delight -->
    <string name="freepikIcons">Icon made by Freepik and obtained from www.flaticon.com</string>
    <string name="title_activity_truck_interface">TruckInterface</string>
    <string name="options_cart">cart</string>
    <string name="options_signOut">Sign Out</string>
    <string name="options_about">About</string>
    <string name="goto_truck_selection">To Truck Selection</string>

    //LoginScreen strings
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_activity_sign_in">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <!--Landing/Submenu Strings -->
    <string name="pizza_motto">We take pride in making a perfect pizza and providing courteous and helpful service on-time, all the time! Every customer says, I\'ll be back! We are the employer of choice offering team members opportunities for growth, advancement, and rewarding careers in a fun, safe working environment.</string>
    <string name="make_order">Let\'s Eat!</string>
    <string name="hyd_motto">Welcome to HyderabadiDelight where you can experience pure delight with some Indian Cuisine.</string>
    <string name="iow_motto">Grandma\'s recipes you\'ll love and adore with Italian flavors that will take you to Sicily.</string>
    <string name="menu">Menu</string>
    <string name="main_course">Main Course</string>
    <string name="chicken_biryani">Chicken Biryani ($10.00)</string>
    <string name="add">Add</string>
    <string name="mysore_masala">Mysore Masala Dosa ($10.00)</string>
    <string name="apps">Appetizers</string>
    <string name="jelebi">Jelebi ($5.00)</string>
    <string name="gulab_jamun">Gulab Jamun ($5.00)</string>
    <string name="drinks">Drinks</string>
    <string name="thums_up">Thums Up ($2.00)</string>
    <string name="mango_lassi">Mango Lassi ($3.00)</string>
    <string name="action_register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="UserName">UserName</string>
    <string name="brmlogo_mainScreen">brm logo main screen</string>
    <string name="pepperoni_pizza">Pepperoni Pizza ($10.00)</string>
    <string name="cheese_pizza">Cheese Pizza ($9.00)</string>
    <string name="spicy_wings">Spicy Wings ($6.00)</string>
    <string name="breadsticks">Breadsticks ($5.00)</string>
    <string name="coca_cola">Coca-Cola ($2.00)</string>
    <string name="sprite">Sprite ($2.00)</string>
    <string name="open_orders">Open Orders</string>
    <string name="purchase">Purchase</string>
    <string name="confirm">Looks Good!</string>
    <string name="orderTotal">(order total here)</string>
    <string name="prompt_number">Number</string>

    //Italian on Wheels Strings
    <string name="italian_menu">Italian on Wheels Menu</string>
    <string name="entrees">Entrees</string>
    <string name="shells">Stuffed Shells ($9.00)</string>
    <string name="add2">Add</string>
    <string name="add3">Add</string>
    <string name="spaghetti">Spaghetti &amp; Meatballs ($10.00)</string>
    <string name="apps2">Appetizers</string>
    <string name="knots">Garlic Knots ($6.00)</string>
    <string name="oysterSalad">Oyster &amp; Mushroom Salad ($7.00)</string>
    <string name="italianDrinks">Drinks</string>
    <string name="virginLim">Virgin Limoncello ($3.50)</string>
    <string name="icedTea">Iced Tea ($2.00)</string>
    <string name="total">Subtotal:</string>

    //Ricos Tacos
    <string name="taco_menu">Rico\'s Tacos</string>
    <string name="entrees2">Entrees</string>
    <string name="cheeseQuesadilla">Cheese Quesadilla ($7.00)</string>
    <string name="add5">Add</string>
    <string name="rolledTacos">Rolled Tacos ($14.98)</string>
    <string name="add4">Add</string>
    <string name="flautas">Flautas ($8.00)</string>
    <string name="apps3">Appetizers</string>
    <string name="churro">Churro ($5.00)</string>
    <string name="cheeseRoll">Cheese Roll ($4.50)</string>
    <string name="salad">Taco Salad ($11.00)</string>
    <string name="mexicanSalad">Mexican Salad ($12.20)</string>
    <string name="tacosClosed">Rico\'s Closed Orders</string>
    <string name="italianClosed">Italian Closed Orders</string>
    <string name="delightClosed">Hyderabadi Closed Orders</string>
    <string name="tacosOpen">Rico\'s Open Orders</string>
    <string name="pizzaClosed">Pizza Closed Orders</string>
    <string name="italianOpen">Italian Open Orders</string>
    <string name="delightOpen">Hyderabadi Open Orders</string>
    <string name="title_activity_cust_sign_up">Customer SignUp</string>
    <string name="title_activity_cust_login">Customer Login</string>
    <string name="Customers">Customers</string>
    <string name="Trucks">Trucks</string>
    <string name="title_activity_truck_login">Food Truck Login</string>
    <string name="customerQ">Already a Customer?</string>
    <string name="checkout">Checkout</string>
    <string name="pizzaOpen">Pizza Open Orders</string>
    <string name="beefTaco">Beef Taco ($1.50)</string>
    <string name="chickenTaco">Chicken Taco ($1.50)</string>
    <string name="tacosDrinks">Drinks</string>
    <string name="horchata">Horchata ($3.50)</string>
    <string name="jarritos">Jarritos-Orange ($2.50)</string>
    <string name="about">About</string>
    <string name="tacosMotto">Mexican cuisine straight from the streets of Tijuana.  We have everything from tacos to horchata!</string>
    <string name="closedOrders">Closed Orders</string>
    <string name="about_ats">This is the Android application for the Bull Run Market at USF made by The Advanced Tech Society</string>
    <string name="truckSchedule">Truck Schedule</string>
    <string name="Monday">Monday: Delight—Italian—Pizza</string>
    <string name="Tuesday">Tuesday: Italian—Pizza—Tacos</string>
    <string name="Wednesday">Wednesday: Pizza—Tacos—Delight</string>
    <string name="Thursday">Thursday: Tacos—Delight—Italian</string>
    <string name="Friday">Friday: Delight—Italian—Pizza—Tacos</string>
    <string name="Saturday">Saturday: Delight—Italian—Pizza—Tacos</string>
    <string name="Sunday">Sunday: None</string>
    <string name="prompt_email">Email</string>


</resources>
