<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Italian"
    tools:showIn="@layout/activity_italian">

    <!--including the appBar toolbar at the top of the activity -->
    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/entrees"
            android:textStyle="bold"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shells"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/shells"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/spaghetti"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/spaghetti"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add" />

    </LinearLayout>

    <!-- Appetizers -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/apps2"
            android:textStyle="bold"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/oysterSalad"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/oyster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/knots"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/garlicKnots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add3" />

    </LinearLayout>

    <!-- Drinks -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/italianDrinks"
            android:textStyle="bold"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/virginLim"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/virginLim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/icedTea"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/icedTea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add" />

    </LinearLayout>


</LinearLayout>