<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Tacos"
    tools:showIn="@layout/activity_tacos">

    <!--including the appBar toolbar at the top of the activity-->
    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/entrees2"
            android:textStyle="bold"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/beefTaco"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/beefTaco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/chickenTaco"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/chickenTaco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add5" />

    </LinearLayout>

    <!-- Appetizers -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/apps3"
            android:textStyle="bold"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/flautas"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/combo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cheeseQuesadilla"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cheeseQuesadilla"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add" />

    </LinearLayout>

    <!-- Drinks -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tacosDrinks"
            android:textStyle="bold"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/horchata"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/horchata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/jarritos"
            android:gravity="center_vertical"
            android:textColor="#0a0a0a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/mex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add" />

    </LinearLayout>
</LinearLayout>