<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TruckSelection">

    <item
        android:id="@+id/options_signOut"
        android:orderInCategory="2"
        android:title="@string/options_signOut"
        android:icon="@drawable/cancel"
        app:showAsAction="never" />
    <item
        android:id="@+id/options_about"
        android:orderInCategory="3"
        android:title="@string/options_about"
        android:icon="@drawable/help"
        app:showAsAction="never" />

    <!--forcing show as 'always' to stay visible; ignoring 'ifRoom' suggestion-->
    <item
        android:id="@+id/orders_closed"
        android:orderInCategory="1"
        android:title="@string/options_cart"
        android:icon="@drawable/ordersclosed"
        app:showAsAction="always"
        android:background="#0000"
        tools:ignore="AlwaysShowAction" />

</menu>