<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout
    tools:context=".About"
    android:weightSum="10"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/linearLayout2"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--including the appBar toolbar at the top of the activity-->


    <include
        android:id="@+id/appBar" layout="@layout/app_bar"/>


    <android.support.constraint.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/relativeLayout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_weight="7"
    android:layout_marginTop="1dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/aboutUs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintBottom_toTopOf="@+id/truckSchedule"
        android:text="@string/about_ats"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"/>


    <TextView
        android:layout_height="41dp"
        android:layout_width="match_parent"
        android:id="@+id/truckSchedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/monday"
        android:text="@string/truckSchedule"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#0a0a0a"
        android:gravity="center"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/monday"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Monday"
        android:layout_marginStart="8dp"
        android:textSize="22sp"
        android:textColor="#0a0a0a"
        tools:layout_editor_absoluteY="122dp"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tuesday"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Tuesday"
        android:layout_marginStart="8dp"
        android:textSize="22sp"
        android:textColor="#0a0a0a"
        app:layout_constraintTop_toBottomOf="@+id/monday"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>


    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/wednesday"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Wednesday"
        android:layout_marginStart="8dp"
        android:textSize="22sp"
        android:textColor="#0a0a0a"
        app:layout_constraintTop_toBottomOf="@+id/tuesday"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/thursday"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="1dp"
        android:text="@string/Thursday"
        android:layout_marginStart="8dp"
        android:textSize="22sp"
        android:textColor="#0a0a0a"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toBottomOf="@+id/wednesday"
        android:layout_alignParentBottom="true"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/friday"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Friday"
        android:layout_marginStart="8dp"
        android:textSize="22sp"
        android:textColor="#0a0a0a"
        app:layout_constraintTop_toBottomOf="@+id/thursday"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/saturday"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Saturday"
        android:layout_marginStart="8dp"
        android:textSize="22sp"
        android:textColor="#0a0a0a"
        app:layout_constraintTop_toBottomOf="@+id/friday"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/sunday"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Sunday"
        android:layout_marginStart="8dp"
        android:textSize="22sp"
        android:textColor="#0a0a0a"
        app:layout_constraintTop_toBottomOf="@+id/saturday"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <android.support.v7.widget.AppCompatButton
        android:background="@color/colorPrimaryDark"
        android:layout_height="44dp"
        android:layout_width="371dp"
        android:id="@+id/btnAbout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/about_website"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/sunday"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="about"/>

</android.support.constraint.ConstraintLayout>

</LinearLayout>